refaktorert til å bruke plugins og libs
